--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,8 @@ header {
   height: 100vh;
   color: var(--color-white);
   overflow: hidden;
+  margin-bottom: 4rem;
+  padding-bottom: 2rem;
 }
 
 section {
@@ -138,7 +140,7 @@ section {
 .header-content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 100%;
+  min-height: 100vh;
 }
 .header-content .left-header {
   display: flex;
@@ -154,8 +156,8 @@ section {
   left: 0;
   top: 0;
   z-index: -1;
-  -webkit-clip-path: polygon(0 0, 38% 0, 75% 100%, 0 99%);
-          clip-path: polygon(0 0, 38% 0, 75% 100%, 0 99%);
+  -webkit-clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+          clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
 }
 .header-content .left-header .image {
   border-radius: var(--br-sm-2);
@@ -165,7 +167,7 @@ section {
   background-color: var(--color-black);
   transition: all 0.4s ease-in-out;
 }
-.header-content .left-header .image .img {
+.header-content .left-header .image img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -173,7 +175,7 @@ section {
   transition: all 0.4s ease-in-out;
   filter: grayscale(100%);
 }
-.header-content .left-header .image .img:hover {
+.header-content .left-header .image img:hover {
   filter: grayscale(0);
 }
 .header-content .right-header {
@@ -181,6 +183,7 @@ section {
   flex-direction: column;
   justify-content: center;
   padding-right: 18rem;
+  padding-left: 4rem;
 }
 .header-content .right-header .name {
   font-size: 3rem;
@@ -257,6 +260,7 @@ section {
 .about-container .left-abt h4 {
   font-size: 2rem;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .about-stats {
@@ -651,7 +655,10 @@ section {
   align-self: flex-start;
 }
 
-.main-btn {
+.btn-con {
+  display: flex;
+}
+.btn-con .main-btn {
   border-radius: 30px;
   color: inherit;
   font-weight: 600;
@@ -662,10 +669,10 @@ section {
   align-items: center;
   overflow: hidden;
 }
-.main-btn .btn-text {
+.btn-con .main-btn .btn-text {
   padding: 0 2rem;
 }
-.main-btn .btn-icon {
+.btn-con .main-btn .btn-icon {
   background-color: var(--color-secondary);
   display: flex;
   align-items: center;
@@ -673,7 +680,7 @@ section {
   border-radius: 50%;
   padding: 1rem;
 }
-.main-btn::before {
+.btn-con .main-btn::before {
   content: "";
   position: absolute;
   top: 0;
@@ -682,10 +689,10 @@ section {
   transition: all 0.4s ease-out;
   z-index: -1;
 }
-.main-btn:hover {
+.btn-con .main-btn:hover {
   transition: all 0.4s ease-out;
 }
-.main-btn:hover::before {
+.btn-con .main-btn:hover::before {
   width: 100%;
   height: 100%;
   background-color: var(--color-secondary);
@@ -706,17 +713,30 @@ section {
   color: var(--color-secondary);
 }
 
-.about-container .left-about p {
-  padding-left: 0;
-}
-
-@media screen and (max-width: 600px) {
+/*--------------------------------------------------------------------------------------------------->*/
+/*media querries starts here*/
+@media screen and (max-width: 767px) {
+  section {
+    padding: 3rem 10rem;
+  }
   header {
     padding: 0 !important;
+    overflow: hidden;
+    margin-bottom: 5rem;
   }
   .header-content {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
+  }
+  .header-content .left-header .image {
+    margin: 0 auto;
+    width: 90%;
+  }
+  .btn-con .main-btn .btn-text {
+    padding: 0 0.2rem;
+  }
+  .left-header {
+    overflow: hidden;
   }
   .left-header .h-shape {
     display: none;
@@ -724,17 +744,19 @@ section {
   .right-header {
     grid-row: 1;
     padding-right: 0rem !important;
+    padding-left: 2rem !important;
     width: 90%;
     margin: 0 auto;
   }
   .right-header .name {
-    font-size: 2.5rem !important;
-    text-align: center;
-    padding-top: 3rem;
+    font-size: 2rem !important;
+    padding-top: 0;
+    padding-bottom: 2rem;
   }
   .header-content .left-header .image {
     margin: 0 auto;
     width: 90%;
+    overflow: hidden;
   }
   .controls {
     top: auto;
@@ -788,19 +810,28 @@ section {
   .contact-content-container {
     flex-direction: column;
   }
-  .contact-content-container .right-contact {
-    margin-left: 0;
-    margin-top: 2.5rem;
-  }
-  .contact-content-container .right-contact .input-2 {
+  .contact-content-container {
     flex-direction: column;
   }
-  .contact-content-container .right-contact .input-2 :last-child {
+  .contact-content-container .right-contact {
+    margin-left: 0 !important;
+    margin-top: 1rem;
+  }
+  .icon-div {
+    flex-direction: column;
+  }
+  .contact-content-container .right-contact .input-control input-2 {
+    flex-direction: column;
+  }
+  .contact-content-container .right-contact .input-control input-2 :last-child {
     margin-left: 0;
     margin-top: 1.5rem;
   }
   .contact-content-container .right-contact {
     margin-bottom: 6rem;
+  }
+  .contact-content-container .left-contact h4 {
+    text-align: center;
   }
   .contact-item {
     flex-direction: column;
@@ -816,121 +847,101 @@ section {
   .contact-item .icon {
     grid-template-columns: 25px 1fr;
   }
+  section {
+    padding: 3rem 1rem;
+  }
   .main-title h2 {
     font-size: 2rem;
   }
   .main-title h2 span {
     font-size: 2.3rem;
   }
-}
-@media screen and (max-width: 1432px) {
-  .container {
-    padding: 7rem 11rem;
-  }
-  .contact-content-con {
-    flex-direction: column;
-  }
-  .contact-content-con .right-contact {
-    margin-left: 0;
-    margin-top: 2.5rem;
-  }
-  .contact-content-con .right-contact .i-c-2 {
-    flex-direction: column;
-  }
-  .contact-content-con .right-contact .i-c-2 :last-child {
-    margin-left: 0;
-    margin-top: 1.5rem;
-  }
-  .contact-content-con .right-contact {
-    margin-bottom: 6rem;
-  }
   .main-title h2 .bg-text {
-    font-size: 5.5rem;
+    font-size: 2.3rem;
   }
 }
-@media screen and (max-width: 1250px) {
-  .blogs {
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 6rem;
+@media screen and (max-width: 1050px) {
+  .container {
+    padding: 2rem 2.5rem !important;
   }
-  .vlogs {
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 6rem;
+  .header-content .left-header .image {
+    margin: 0 auto;
+    width: 400px;
   }
-  .portfolios {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .header-content .right-header {
-    padding-right: 9rem;
-  }
-}
-@media screen and (max-width: 660px) {
-  .blogs {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .vlogs {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .portfolios {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-@media screen and (max-width: 1070px) {
   .about-container {
     grid-template-columns: repeat(1, 1fr);
   }
   .about-container .right-abt {
     padding-top: 2.5rem;
   }
-  .main-title h2 {
-    font-size: 4rem;
-  }
-  .main-title h2 span {
-    font-size: 4rem;
-  }
-}
-@media screen and (max-width: 970px) {
-  .container {
-    padding: 7rem 6rem;
-  }
-  .about-container .left-abt {
-    padding-right: 0rem;
-  }
-  .header-content {
-    grid-template-columns: repeat(1, 1fr);
-    padding-bottom: 6rem;
-  }
-  .left-header .h-shape {
-    display: none;
-  }
-  .left-header .image {
-    width: 90% !important;
-    margin: 0 auto !important;
-  }
-  .right-header {
-    grid-row: 1;
-    padding-right: 0rem !important;
-    width: 90%;
-    margin: 0 auto;
-  }
-  .right-header .name {
-    font-size: 2.5rem !important;
-    text-align: center;
-    padding-top: 3rem;
-  }
-}
-@media screen and (max-width: 700px) {
-  .container {
-    padding: 7rem 3rem;
+  .about-container .right-abt .about-items {
+    padding-top: 2rem;
   }
   .about-stats .progress-bars {
     grid-template-columns: repeat(1, 1fr);
   }
-  .about-container .right-abt {
+  .portfolios {
     grid-template-columns: repeat(1, 1fr);
+    padding-bottom: 6rem;
+    margin-top: 1rem;
   }
-  .timeline {
+  .blogs {
     grid-template-columns: repeat(1, 1fr);
+    padding-bottom: 6rem;
+  }
+  .vlogs {
+    grid-template-columns: repeat(1, 1fr);
+    padding-bottom: 6rem;
+  }
+  .contact-content-container {
+    flex-direction: column;
+  }
+  .contact-content-container {
+    flex-direction: column;
+  }
+  .contact-content-container .right-contact {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+  .contact-content-container .right-contact .input-control input-2 {
+    flex-direction: column;
+  }
+  .contact-content-container .right-contact .input-control input-2 :last-child {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
+  .contact-content-container .right-contact {
+    margin-bottom: 6rem;
+  }
+  .contact-content-container .left-contact h4 {
+    text-align: center;
+  }
+  .contact-item {
+    flex-direction: column;
+    margin: 1rem 0;
+  }
+  .contact-item p {
+    font-size: 15px;
+    color: var(--color-grey-2);
+  }
+  .contact-item span {
+    font-size: 15px;
+  }
+  .contact-item .icon {
+    grid-template-columns: 25px 1fr;
+  }
+  .controls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+  }
+  .controls .control {
+    margin: 1rem 0.3rem;
   }
   .main-title h2 {
     font-size: 3rem;
