--- a/styles/style.scss
+++ b/styles/style.scss
@@ -45,6 +45,9 @@ header
     height: 100vh;
     color: var(--color-white);
     overflow: hidden;
+    margin-bottom: 4rem;
+    padding-bottom: 2rem;
+
 }
 section
 {
@@ -165,18 +168,15 @@ section
 
 
 /*headercomponents*/
-.header-content
-{
+.header-content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    height: 100%;
-    .left-header
-    {
+    min-height: 100vh;
+    .left-header {
         display: flex;
         align-items: center;
         position: relative;
-        .h-shape
-        {
+        .h-shape {
             transition: all .4s ease-in-out;
             width: 65%;
             height: 100%;
@@ -185,47 +185,39 @@ section
             left: 0;
             top: 0;
             z-index: -1;
-            clip-path: polygon(0 0, 38% 0, 75% 100%, 0 99%);
+            clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
         }
-        .image
-        {
+        .image {
             border-radius: var(--br-sm-2);
             height: 90%;
             width: 68%;
             margin-left: 4rem;
             background-color: var(--color-black);
             transition: all .4s ease-in-out;
-            .img
-            {
+            img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 transition: all .4s ease-in-out;
                 filter: grayscale(100%);
-                &:hover
-                {
+                &:hover{
                     filter: grayscale(0);
                 }
             }
-
         }
     }
-    .right-header
-    {
+
+    .right-header {
         display: flex;
         flex-direction: column;
         justify-content: center;
         padding-right: 18rem;
-        .name
-        {
+        padding-left: 4rem;
+        .name {
             font-size: 3rem;
-            span
-            {
-                color: var(--color-secondary);
-            }
+            span { color: var(--color-secondary); }
         }
-        p
-        {
+        p {
             margin: 1.5rem 0;
             line-height: 2rem;
         }
@@ -306,6 +298,7 @@ section
         {
             font-size: 2rem;
             text-transform: uppercase;
+            text-align: center;
 
         }
     }
@@ -797,6 +790,10 @@ section
     }
 }
 
+
+
+
+
 /*----------------------------independent components--------------------------------*/
 
 .btn-container
@@ -805,51 +802,54 @@ section
     align-self: flex-start;
 }
 
-
-.main-btn {
-    border-radius: 30px;
-    color: inherit;
-    font-weight: 600;
-    position: relative;
-    border: 1px solid var(--color-secondary);
+.btn-con{
     display: flex;
-    align-self: flex-start;
-    align-items: center;
-    overflow: hidden;
-    .btn-text 
-    { 
-        padding: 0 2rem; 
-    }
-    .btn-icon 
-    {
-        background-color: var(--color-secondary);
+    .main-btn {
+        border-radius: 30px;
+        color: inherit;
+        font-weight: 600;
+        position: relative;
+        border: 1px solid var(--color-secondary);
         display: flex;
+        align-self: flex-start;
         align-items: center;
-        justify-content: center;
-        border-radius: 50%;
-        padding: 1rem;
-    }
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translateX(100%);
-        transition: all .4s ease-out;
-        z-index: -1;
-    }
-    &:hover {
-        transition: all .4s ease-out;
-        &::before {
-            width: 100%;
-            height: 100%;
-            background-color: var(--color-secondary);
-            transform: translateX(0);
-            transition: all .4s ease-out;
+        overflow: hidden;
+        .btn-text 
+        { 
+            padding: 0 2rem; 
         }
+        .btn-icon 
+        {
+            background-color: var(--color-secondary);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            padding: 1rem;
+        }
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            transform: translateX(100%);
+            transition: all .4s ease-out;
+            z-index: -1;
+        }
+        &:hover {
+            transition: all .4s ease-out;
+            &::before {
+                width: 100%;
+                height: 100%;
+                background-color: var(--color-secondary);
+                transform: translateX(0);
+                transition: all .4s ease-out;
+            }
+        }
+    
     }
-
 }
+
 
 .main-title
 {
@@ -867,5 +867,291 @@ section
     }
 }
 
+/*--------------------------------------------------------------------------------------------------->*/
 
-@import './media';
+/*media querries starts here*/
+
+@media screen and (max-width:767px){
+
+section
+{
+    padding: 3rem 10rem;
+}
+
+    header{
+        padding: 0 !important;
+        overflow: hidden;
+        margin-bottom: 5rem;
+    }
+    
+    .header-content{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+    }
+
+    .header-content .left-header .image{
+        margin: 0 auto;
+        width: 90%;
+    }
+    .btn-con .main-btn .btn-text {
+        padding: 0 0.2rem;
+    }
+
+    .left-header{
+        overflow: hidden;
+        .h-shape{
+            display: none;
+        }
+    }
+    .right-header{
+        grid-row: 1;
+        padding-right: 0rem !important;
+        padding-left: 2rem !important;
+        width: 90%;
+        margin: 0 auto;
+        .name{
+            font-size: 2rem !important;
+            padding-top: 0;
+            padding-bottom: 2rem;
+        }
+    }
+    .header-content .left-header .image{
+        margin: 0 auto;
+        width: 90%;
+        overflow: hidden;
+        
+    }
+
+    .controls{
+        top: auto;
+        bottom: 0;
+        flex-direction: row;
+        justify-content: center;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        background-color: var(--color-grey-5);
+        .control{
+            margin: 1rem .3rem;
+        }
+    }
+    .about-container{
+        grid-template-columns: repeat(1, 1fr);
+        .right-abt{
+            grid-template-columns: repeat(1, 1fr);
+            padding-top: 2.5rem;
+        }
+        .left-abt{
+            padding-right: 0;
+            p{
+                padding-left: 0;
+            }
+        }
+    }
+    .timeline{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+    }
+
+    .container{
+        padding: 2rem 2.5rem !important;
+    }
+
+    .about-stats{
+        .progress-bars{
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
+    .portfolios{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+        margin-top: 1rem;
+    }
+
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+    }
+    .vlogs{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+    }
+    .contact-content-container{
+        flex-direction: column; 
+    }
+    .contact-content-container{
+        flex-direction: column;
+        .right-contact{
+            margin-left: 0 !important;
+            margin-top: 1rem;
+        }
+        
+    }
+    .icon-div{
+        flex-direction: column; 
+    }
+    .contact-content-container .right-contact .input-control input-2{
+        flex-direction: column;
+    }
+    .contact-content-container .right-contact .input-control input-2 :last-child{
+        margin-left: 0;
+        margin-top: 1.5rem;
+    }
+
+    .contact-content-container .right-contact{
+        margin-bottom: 6rem;
+    }
+    .contact-content-container .left-contact h4{
+        text-align: center;
+    }
+
+    .contact-item{
+        flex-direction: column;
+        margin: 1rem 0;
+        p{
+            font-size: 15px;
+            color: var(--color-grey-2);
+        }
+        span{
+            font-size: 15px;
+        }
+        .icon{
+            grid-template-columns: 25px 1fr;
+        }
+    }
+      section
+    {
+    
+        padding: 3rem 1rem;
+    }
+
+    .main-title{
+        h2{
+            font-size: 2rem;
+            span{
+                font-size: 2.3rem;
+            }
+            .bg-text{
+                font-size: 2.3rem;
+            }
+        }
+    }
+
+} 
+ 
+
+@media screen and (max-width:1050px){
+
+    .container
+    {
+        padding: 2rem 2.5rem !important;
+    }
+    
+
+    .header-content .left-header .image{
+        margin: 0 auto;
+        width: 400px;
+    }
+
+    .about-container{
+        grid-template-columns: repeat(1, 1fr);
+        
+        .right-abt{
+            padding-top: 2.5rem;
+           
+            .about-items
+            {
+                padding-top: 2rem;
+                 
+
+            }
+        }
+    }
+    .about-stats{
+        .progress-bars{
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+    .portfolios{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+        margin-top: 1rem;
+    }
+
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+    }
+    .vlogs{
+        grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 6rem;
+    }
+
+    .contact-content-container{
+        flex-direction: column; 
+    }
+    .contact-content-container{
+        flex-direction: column;
+        .right-contact{
+            margin-left: 0;
+            margin-top: 1rem;
+        }
+        
+    }
+
+    .contact-content-container .right-contact .input-control input-2{
+        flex-direction: column;
+    }
+    .contact-content-container .right-contact .input-control input-2 :last-child{
+        margin-left: 0;
+        margin-top: 1.5rem;
+    }
+
+    .contact-content-container .right-contact{
+        margin-bottom: 6rem;
+    }
+    .contact-content-container .left-contact h4{
+        text-align: center;
+    }
+
+    .contact-item{
+        flex-direction: column;
+        margin: 1rem 0;
+        p{
+            font-size: 15px;
+            color: var(--color-grey-2);
+        }
+        span{
+            font-size: 15px;
+        }
+        .icon{
+            grid-template-columns: 25px 1fr;
+        }
+    }
+
+    .controls{
+        top: auto;
+        bottom: 0;
+        flex-direction: row;
+        justify-content: center;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        background-color: var(--color-grey-5);
+        .control{
+            margin: 1rem .3rem;
+        }
+    }
+
+    .main-title{
+        h2{
+            font-size: 3rem;
+            span{
+                font-size: 3rem;
+            }
+        }
+    }
+}
+    
+
